# TradeManager

./: .gitignore  SchwabStream.py  main.py  pyproject.toml  requirements.txt  test_TradeManager.py  tox.ini
.github/workflows/: build-and-test.yml
app/: config.py  database.py  models.py  security.py
app/routers/: auth_google.py  auth_local.py
src/: schema.py
static/css/: base.css
templates/: accounts.html  base.html  dashboard.html  login.html  profile.html  settings.html  trade.html  user_settings.html
